# guard-and-guide

./: .gitignore  Cargo.toml  README.md  build.rs  dprint.json  flake.nix  justfile  renovate.json  rules.example.toml
.github/scripts/: generate-changelog.sh
.github/workflows/: ci.yml  publish.yml
src/: agent.rs  config.rs  evaluator.rs  input.rs  main.rs  output.rs
tests/: integration.rs
tests/fixtures/: rules.toml
